[gd_scene load_steps=8 format=2]

[ext_resource path="res://my_scripts/intro_button.gd" type="Script" id=1]
[ext_resource path="res://my_rooms/Node2D.gd" type="Script" id=2]
[ext_resource path="res://my_fonts/MADE Evolve Sans Regular (PERSONAL USE).ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.71875, 1, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 5
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 10
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Shadow" ]

[sub_resource type="StyleBoxFlat" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.733333, 1, 0.980392, 1 )
draw_center = true
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = false
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Shadow" ]

[sub_resource type="DynamicFont" id=4]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="node_intro" type="Node2D" index="0"]

position = Vector2( -11, 1 )
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="0"]

stream = null
volume_db = 0.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="Node2D" type="Node2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( -35.2105, -6.57901 )
script = ExtResource( 2 )
moveUpSpeed = -0.5

[node name="Label" type="Label" parent="Node2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 82.0
margin_top = 529.0
margin_right = 949.0
margin_bottom = 1087.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "AsthmaGlitch

Programmation & Design : 
Thomas Gaudy (Ludociels pour tous : ludocielspourtous.org) et Yannick Gervais
Narration - compléments graphiques - recherches musicales : Megann Stephan
Recherches graphiques et musicales - Ivan Gulizia

Coordination 
Breathing Games : Fabio Balli (breathinggames.net)
Swiss Game Center : Charly Pache (swissgamecenter.ch)
Bernard Dugas

Organisation générale de l'événement : (http://opengeneva.org/)

Soutien moral / groupe Game Jam Breathing Games Genève :
Renaud Ory, Lucas Delvals, Aminata, Levan Jeanneret, Nibé Mbumba, Damien Fangous, Henrique Alves et Pauline Rossel:)

Utilisation des assets graphiques du jeu vidéo Glitch (http://www.glitchthegame.com/)

Utilisation de la police de texte \"MADE Evolve Sans\" par MadeType avec la permission de l'auteur. (https://www.behance.net/madetype)

Musiques :
	Deep space.mp3 par almusic34 : https://freesound.org/people/almusic34/sounds/181031/
	Cosmic Glow par Andrewkn : https://freesound.org/people/Andrewkn/sounds/391438/
	Hang song 2 par frederic.font : https://freesound.org/people/frederic.font/sounds/130878/
	Surrealism (Ambient Mix) par Andrewkn - https://freesound.org/people/Andrewkn/sounds/417884/
	Rec_track_13.wav par penetrermind - https://freesound.org/people/penetrermind/sounds/412193/
	film for a music.wav par evanjones4 - https://freesound.org/people/evanjones4/sounds/411651/
	Listen par Andrewkn - https://freesound.org/people/Andrewkn/sounds/379805/
	image31_s ambient pad.wav par Karma-Ron - https://freesound.org/people/Karma-Ron/sounds/240622/
	
Merci à tous les contributeurs pour l'organisation de la GameJam Open Geneva."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="." index="2"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -91.0
margin_top = 464.0
margin_right = 1059.0
margin_bottom = 539.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="accueil" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 353.0
margin_top = 473.0
margin_right = 616.0
margin_bottom = 528.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "ACCUEIL"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[connection signal="pressed" from="accueil" to="." method="_on_accueil_pressed"]


